<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SummaryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            app:cardBackgroundColor="@color/colorDarkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/summary_list_back_button"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorTransparent"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/summary_station_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/station_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/summary_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/summary_list_item"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <EditText
            android:id="@+id/manager_name"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/pump_details_text_background"
            android:hint="@string/manager_s_name"
            android:padding="10dp"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorDarkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/summary_recycler_view" />

        <EditText
            android:id="@+id/manager_phone"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:inputType="phone"
            android:background="@drawable/pump_details_text_background"
            android:hint="@string/manager_s_phone_number"
            android:padding="10dp"
            android:textColorHint="@color/colorDarkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/manager_name" />

        <com.github.gcacace.signaturepad.views.SignaturePad
            android:id="@+id/signature_pad"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/pump_details_text_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:penColor="@android:color/black" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/manager_s_signature"
            android:textColor="@color/colorDarkBlue"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/manager_phone" />

        <Button
            android:id="@+id/clear_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:fontFamily="@font/nunito_semibold"
            android:textColor="@color/colorBlack"
            android:background="@color/colorYellow"
            app:layout_constraintEnd_toEndOf="@+id/signature_pad"
            app:layout_constraintTop_toTopOf="@+id/signature_pad" />

        <Button
            android:id="@+id/submit_summary_details"
            android:layout_width="0dp"
            android:layout_marginTop="30dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@+id/signature_pad"
            app:layout_constraintStart_toStartOf="@+id/signature_pad"
            app:layout_constraintTop_toBottomOf="@+id/signature_pad"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
