<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.AddDeviceFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:cardBackgroundColor="@color/colorDarkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageButton
                    android:id="@+id/back_button_add_device"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@color/colorTransparent"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/add_device"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <Spinner
            android:id="@+id/device_type"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/pump_details_text_background"
            android:enabled="false"
            android:hint="@string/device_type"
            android:padding="10dp"
            android:textColorHint="@color/colorDarkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <!--    <EditText-->
        <!--        android:id="@+id/select_pump"-->
        <!--        android:layout_width="0dp"-->
        <!--        android:layout_height="60dp"-->
        <!--        android:layout_marginStart="16dp"-->
        <!--        android:layout_marginLeft="16dp"-->
        <!--        android:layout_marginTop="20dp"-->
        <!--        android:layout_marginEnd="16dp"-->
        <!--        android:padding="10dp"-->
        <!--        android:layout_marginRight="16dp"-->
        <!--        android:hint="@string/select_pumps"-->
        <!--        android:enabled="false"-->
        <!--        android:textColorHint="@color/colorDarkBlue"-->
        <!--        android:background="@drawable/pump_details_text_background"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@id/device_type" />-->

        <LinearLayout
            android:id="@+id/linear_layout_add_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/device_type"
            >


        </LinearLayout>

        <EditText
            android:id="@+id/device_id"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:layout_marginRight="16dp"
            android:hint="@string/device_id"
            android:textColorHint="@color/colorDarkBlue"
            android:inputType="number"
            android:background="@drawable/pump_details_text_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_add_device" />

        <EditText
            android:id="@+id/probe_address"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:layout_marginRight="16dp"
            android:inputType="text"
            android:hint="@string/probe_address_comma_separated_values"
            android:textColorHint="@color/colorDarkBlue"
            android:background="@drawable/pump_details_text_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/device_id" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:layout_marginRight="16dp"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:textColorHint="@color/colorDarkBlue"
            android:background="@drawable/pump_details_text_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/probe_address" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/fill_the_form_below_to_add_a_device"
            android:textColor="@color/colorDarkBlue"
            android:fontFamily="@font/nunito_bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <Button
            android:id="@+id/add_device_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/curved_button"
            android:backgroundTint="@color/colorDarkBlue"
            android:text="@string/add_device"
            app:layout_constraintEnd_toEndOf="@+id/phone_number"
            app:layout_constraintStart_toStartOf="@+id/phone_number"
            app:layout_constraintTop_toBottomOf="@+id/phone_number" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/device_type"
            android:textColor="@color/colorDarkBlue"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/device_type"
            app:layout_constraintStart_toStartOf="@+id/device_type"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

